--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,13 @@
   min-height: 90vh;
   width: 60%;
   background: linear-gradient( to right bottom, rgba(0, 4, 231, 0.6), rgba(255, 255, 255, 0.2));
-  border-radius: 2rem;
   -webkit-border-radius: 2rem;
   -moz-border-radius: 2rem;
   -ms-border-radius: 2rem;
   -o-border-radius: 2rem;
+  border-radius: 2rem;
   z-index: 9;
+  -webkit-backdrop-filter: blur(2rem);
   backdrop-filter: blur(2rem);
   box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.065), 0 2px 2px hsl(0deg 0% 0% / 0.065), 0 4px 4px hsl(0deg 0% 0% / 0.065), 0 8px 8px hsl(0deg 0% 0% / 0.065), 0 16px 16px hsl(0deg 0% 0% / 0.065);
 }
@@ -38,11 +39,11 @@
   width: 5rem;
   position: absolute;
   z-index: 3;
-  border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+  border-radius: 50%;
   box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.065), 0 2px 2px hsl(0deg 0% 0% / 0.065), 0 4px 4px hsl(0deg 0% 0% / 0.065), 0 8px 8px hsl(0deg 0% 0% / 0.065), 0 16px 16px hsl(0deg 0% 0% / 0.065);
 }
 
@@ -91,8 +92,8 @@
 }
 
 .wave1 {
-  animation: animate 30s linear infinite;
   -webkit-animation: animate 30s linear infinite;
+  animation: animate 30s linear infinite;
   z-index: 3;
   opacity: 1;
   animation-delay: 0s;
@@ -109,8 +110,8 @@
 }
 
 .wave2 {
-  animation: animate2 15s linear infinite;
   -webkit-animation: animate2 15s linear infinite;
+  animation: animate2 15s linear infinite;
   z-index: 4;
   opacity: 0.5;
   animation-delay: -5s;
@@ -127,8 +128,8 @@
 }
 
 .wave3 {
-  animation: animate 5s linear infinite;
   -webkit-animation: animate 5s linear infinite;
+  animation: animate 5s linear infinite;
   z-index: 5;
   opacity: 0.7;
   animation-delay: -2s;
@@ -136,8 +137,8 @@
 }
 
 .wave4 {
-  animation: animate2 30s linear infinite;
   -webkit-animation: animate2 30s linear infinite;
+  animation: animate2 30s linear infinite;
   z-index: 6;
   opacity: 0.2;
   animation-delay: -2s;
@@ -163,7 +164,7 @@
   padding: 20px;
 }
 
-.alart-text {
+.alert-text {
   font-size: 25px;
   color: rgb(207, 23, 23);
 }
@@ -200,8 +201,8 @@
 
 .gradient-text {
   background: -webkit-linear-gradient(left, #2e09e8 30%, #35a0e2 60%);
-  background-clip: text;
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -221,8 +222,8 @@
 .connect-wallet-button {
   background: -webkit-linear-gradient(left, #096003, #000507);
   background-size: 200% 200%;
-  animation: gradient-animation 4s ease infinite;
   -webkit-animation: gradient-animation 4s ease infinite;
+  animation: gradient-animation 4s ease infinite;
 }
 
 .mint-button {
@@ -236,11 +237,11 @@
   padding: 13px;
   background: transparent;
   border: 2px solid rgb(32, 129, 226);
-  border-radius: 15px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
+  border-radius: 15px;
   text-decoration: none;
   color: rgb(32, 129, 226);
   position: relative;
