--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,8 @@
   -o-border-radius: 2rem;
   border-radius: 2rem;
   z-index: 9;
-  -webkit-backdrop-filter: blur(2rem);
-  backdrop-filter: blur(2rem);
+  /* -webkit-backdrop-filter: blur(2rem);
+  backdrop-filter: blur(2rem); */
   box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.065), 0 2px 2px hsl(0deg 0% 0% / 0.065), 0 4px 4px hsl(0deg 0% 0% / 0.065), 0 8px 8px hsl(0deg 0% 0% / 0.065), 0 16px 16px hsl(0deg 0% 0% / 0.065);
 }
 
